Closed
Bug 1583019
Opened 6 years ago
Closed 6 years ago
Crash in [@ PLDHashTable::Search | mozilla::dom::`anonymous namespace'::PrepareDatastoreOp::Cleanup]
Categories
(Core :: Storage: localStorage & sessionStorage, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla71
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | disabled |
firefox69 | --- | disabled |
firefox70 | --- | fixed |
firefox71 | --- | fixed |
People
(Reporter: janv, Assigned: janv)
References
(Blocks 1 open bug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-52e61a77-c98a-4afc-a57c-8a9030190913.
Top 10 frames of crashing thread:
0 xul.dll PLDHashTable::Search xpcom/ds/PLDHashTable.cpp:506
1 xul.dll void mozilla::dom::`anonymous namespace'::PrepareDatastoreOp::Cleanup dom/localstorage/ActorsParent.cpp:7732
2 xul.dll nsresult mozilla::dom::`anonymous namespace'::LSRequestBase::Run dom/localstorage/ActorsParent.cpp:6604
3 xul.dll void mozilla::dom::`anonymous namespace'::PrepareDatastoreOp::ActorDestroy dom/localstorage/ActorsParent.cpp:7844
4 xul.dll mozilla::ipc::IProtocol::DestroySubtree ipc/glue/ProtocolUtils.cpp:572
5 xul.dll mozilla::ipc::IProtocol::DestroySubtree ipc/glue/ProtocolUtils.cpp:560
6 xul.dll mozilla::ipc::PBackgroundParent::OnChannelError ipc/ipdl/PBackgroundParent.cpp:5984
7 xul.dll nsresult mozilla::detail::RunnableMethodImpl<mozilla::dom::Performance*, void xpcom/threads/nsThreadUtils.h:1176
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
Assignee | ||
Comment 1•6 years ago
|
||
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3408771624ff
Cleanup PreparedDatastore only if it was added to gPreparedDatastores; r=asuth
![]() |
||
Comment 3•6 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Comment 4•6 years ago
|
||
Please nominate this for Beta approval when you're comfortable doing so.
status-firefox69:
--- → disabled
status-firefox70:
--- → affected
status-firefox-esr60:
--- → unaffected
status-firefox-esr68:
--- → disabled
Flags: needinfo?(jvarga)
Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 9094458 [details]
Bug 1583019 - Cleanup PreparedDatastore only if it was added to gPreparedDatastores; r=asuth
Beta/Release Uplift Approval Request
- User impact if declined: Users may experience a rare crash.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's low volume crash, but it's also very simple patch.
- String changes made/needed: None
Flags: needinfo?(jvarga)
Attachment #9094458 -
Flags: approval-mozilla-beta?
![]() |
||
Comment 6•6 years ago
|
||
Comment on attachment 9094458 [details]
Bug 1583019 - Cleanup PreparedDatastore only if it was added to gPreparedDatastores; r=asuth
Crash fix, let's take this for beta 12.
Attachment #9094458 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•6 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•