Bug 1583019 - Cleanup PreparedDatastore only if it was added to gPreparedDatastores; r=asuth, a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D46727

--HG--
extra : source : 3408771624ff0a56f9fe5cbb5594c13fa99887e5